<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:orientation="vertical"
  tools:context=".mount.MountServerActivity">


  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <com.evideo.sambaprovider.mount.BrowsingAutocompleteTextView
        android:id="@+id/share_path"
        android:layout_width="match_parent"
        android:layout_height="@dimen/clickable_height"
        android:minLines="1"
        android:maxLines="1"
        android:inputType="textUri"
        android:hint="@string/share_path"/>

      <CheckBox
        android:id="@+id/needs_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/clickable_height"
        android:checked="false"
        android:text="@string/needs_password"/>

      <LinearLayout
        android:id="@+id/password_hide_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
          android:id="@+id/domain"
          android:layout_width="match_parent"
          android:layout_height="@dimen/clickable_height"
          android:hint="@string/domain"
          android:inputType="text"
          android:maxLines="1"
          android:minLines="1"/>

        <EditText
          android:id="@+id/username"
          android:layout_width="match_parent"
          android:layout_height="@dimen/clickable_height"
          android:hint="@string/username"
          android:inputType="text"
          android:maxLines="1"
          android:minLines="1"/>

        <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="@dimen/clickable_height"
          android:fontFamily="sans-serif"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:maxLines="1"
          android:minLines="1"/>

      </LinearLayout>

      <CheckBox
        android:id="@+id/pin_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/pin_this_share"
        android:visibility="gone"/>

    </LinearLayout>
  </ScrollView>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:id="@+id/gplv3_link"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/clickable_height"
      android:layout_alignParentStart="true"
      android:gravity="bottom"
      android:paddingBottom="8dp"
      android:maxLines="1"
      android:textSize="15sp"
      android:text="@string/gplv3_link" />

    <Button
      android:id="@+id/mount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:textColor="@android:color/white"
      android:backgroundTint="@color/colorPrimary"
      android:text="@string/mount"/>

    <Button
      android:id="@+id/cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toStartOf="@id/mount"
      android:text="@string/cancel"/>

    <Button
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/cancel"
        android:text="show"/>

  </RelativeLayout>
</LinearLayout>
